# Curriculo_IA

./: .env  README.md  ai.py  analise.py  app.py  authenticate.py  create_job.py  database.py  db.json  download_cv.py  helper.py  pyproject.toml  requirements.txt  reset_password.py  teste.py
CONFIG/: database.py
LOGS/: log_config.py
SERVICES/: ai.py  analise.py  create_job.py
VIEWS/: helper.py
models/: analysis.py  file.py  job.py  resum.py
venv312/: pyvenv.cfg
venv312/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  jp.py  jsondiff  jsonpatch  jsonpointer  prov-compare  prov-convert  sessionmirror.py
