[project]
name = "airflow-dadosvm"
version = "0.1.0"
description = "Sistema de análise de currículos com IA"
authors = [
    {name = "Vinicius Niceas"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "tinydb",
    "pydantic (>=2.11.4,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "streamlit-aggrid (>=1.1.4.post1,<2.0.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "openai (>=1.77.0,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "Curriculo_IA" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
